classDiagram
  class Benefit {
    type: String
    employee: ObjectId
    employeeName: String
    status: String [Required]
    approvedBy: ObjectId
    name: String [Required]
    amount: Number [Required]
    reason: String
    requestDate: String [Required]
    department: ObjectId
    organizationId: String [Required]
    createdAt: Date
    updatedAt: Date
  }

  Benefit --> Employee
  Benefit --> Employee
  Benefit --> Department
